--- a/PRIN/index.css
+++ b/PRIN/index.css
@@ -1,59 +1,44 @@
-*{margin: 0}
+*{
+	font-family: 'Pathway Gothic One', sans-serif;
+	margin: 0;
+	padding: 0;
+}
 
-header{
+.top{
 	border-bottom: solid 5px #ffb000;
+	display: flex;
 	height: 70px;
-	padding: 0 5%;
+	padding-left: 10%;
+	padding-right: 10%;
+	width: 80%;
 }
 
-#bt_menu{
-	display: none;
-}
-
-label[for="bt_menu"]{
-	color: #ffb000;
-	cursor: pointer;
-	display: none;
-	float: right;
-	font-size: 30px;
+.logo{
 	height: 70px;
-	line-height: 70px;
-	margin: 0 15px;
 }
 
-.name_site{
-	position: fixed;
-    height: 11%;
-    left: 9%;
-    line-height: 70px;
-    width: 16%;
-    font-family: 'Righteous', cursive;
-	
+.logo img{
+	display: inline-block;
+	float: left;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
-.name_site a{
-	text-decoration: none;
+.logo p{
+	font-family: 'Righteous', cursive;
 	font-size: 25px;
-	color: #000;
-}
-
-#logo{
-    position: fixed;
-    height: 40px;
-    width: 48px;
-    top: 10px;
-    left: 71px;
-    line-height: 70px;
-
+	float: left;
+	height: 50px;
+	line-height: 50px;
+	margin-bottom: 10px;
+	margin-right: 10px;
+	margin-top: 10px;
 }
 
 .menu{
-    position: fixed;
-    left: 35%;
-    height: 11%;
-    line-height: 70px;
-    margin: auto;
-    width: 57%;
+	height: 70px;
+	margin: auto;
 }
 
 .menu ul{
@@ -62,24 +47,47 @@ label[for="bt_menu"]{
 
 .menu ul li{
 	float: left;
-	margin: 0 15px;
+	font-size: 18px;
+	line-height: 70px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .menu ul li a{
 	color: #000;
-	font-size: 13px;
-	font-weight: bolder;
 	text-decoration: none;
-	font-family:'Lato', sans-serif;
-
 }
 
 .menu ul li a:hover{
 	color: #ffb000;
 }
 
-@media(max-width: 768px){
-	label[for="bt_menu"]{
-		display: block;
-	}
+.buttons{
+	height: 70px;
+}
+
+#bt_register{
+	background-color: #ffb000;
+	border: none;
+	cursor: pointer;
+	float: right;
+	font-size: 18px;
+	margin-bottom: 15px;
+	margin-left: 5px;
+	margin-right: 10px;
+	margin-top: 15px;		
+	padding: 10px;
+}
+
+#bt_login{
+	background-color: #ffb000;
+	border: none;
+	cursor: pointer;
+	float: right;
+	font-size: 18px;
+	margin-bottom: 15px;
+	margin-left: 10px;
+	margin-right: 5px;
+	margin-top: 15px;	
+	padding: 10px;
 }
