--- a/PRIN1/index.css
+++ b/PRIN1/index.css
@@ -1,125 +1,29 @@
-*{
-	font-family: 'Pathway Gothic One', sans-serif;
-	margin: 0;
-	padding: 0;
-}
-
-.top{
-	border-bottom: solid 5px #ffb000;
+.search{
+	background-image: url(img/background.jpg);
+	background-size: 100%;
 	display: flex;
-	height: 70px;
-	padding-left: 10%;
-	padding-right: 10%;
-	width: 80%;
+	height: 500px;
+	line-height: 500px;
+	width: 100%;
 }
 
-.logo{
-	height: 70px;
+#search_bar{
+	border: solid 5px #ffb000;
+	font-size: 1.5em;
+	height: 40px;
+	outline: none;
+	padding: 5px;
+	width: 500px;
 }
 
-.logo img{
-	display: inline-block;
-	float: left;
-	margin-bottom: 10px;
-	margin-left: 10px;
-	margin-top: 10px;
-}
-
-.logo p{
-	font-family: 'Righteous', cursive;
-	font-size: 25px;
-	float: left;
-	height: 50px;
-	line-height: 50px;
-	margin-bottom: 10px;
-	margin-right: 10px;
-	margin-top: 10px;
-}
-
-.menu{
-	height: 70px;
-	margin: auto;
-}
-
-.menu ul{
-	list-style: none;
-}
-
-.menu ul li{
-	float: left;
-	font-size: 18px;
-	line-height: 70px;
-	margin-left: 10px;
-	margin-right: 10px;
-}
-
-.menu ul li a{
-	color: #000;
-	text-decoration: none;
-}
-
-.menu ul li a:hover{
-	color: #ffb000;
-}
-
-.buttons{
-	display: flex;
-	height: 70px;
-}
-
-#bt_register{
-	background-color: #ffb000;
+#bt_search{
 	border: none;
-	cursor: pointer;
-	float: right;
-	font-size: 18px;
-	margin-bottom: 15px;
-	margin-left: 5px;
-	margin-right: 10px;
-	margin-top: 15px;		
-	padding: 10px;
-}
-
-#bt_login{
 	background-color: #ffb000;
-	border: none;
+	color: #fff;
 	cursor: pointer;
-	float: right;
-	font-size: 18px;
-	margin-bottom: 15px;
-	margin-left: 10px;
-	margin-right: 5px;
-	margin-top: 15px;	
+	font-size: 1.5em;
+	height: 60px;
+	outline: none;
 	padding: 10px;
-}
-
-#bt_menu{
-	display: none;
-}
-
-label[for="bt_menu"]{
-	color: #ffb000;
-	cursor: pointer;
-	display: none;
-	font-size: 30px;
-	float: right;
-	height: 70px;
-	line-height: 70px;
-	text-align: center;
-	width: 70px;
-}
-
-@media(max-width: 950px){
-	.menu{
-		display: none;
-	}
-
-	.buttons{
-		display: none;
-	}
-
-	label[for="bt_menu"]{
-		display: block;
-		margin-left: auto;
-	}
+	width: 100px;
 }
