--- a/PRIN1/identification.css
+++ b/PRIN1/identification.css
@@ -1,34 +1,31 @@
-*{margin: 0}
-
 .content{
 	background-color: #ffb000;
-	height: auto;
-	margin: auto;
-	margin-bottom: 5%;
-	margin-top: 5%;
-	padding: 40px;
-	width: 380px;
+	color: #000;
+	font-size: 1em;
+	height: 225px;
+	margin: 50px auto 0px;
+	padding: 50px;
+	width: 350px;
 }
 
-input {
+#credential_bar{
 	background-color: #ffb000;
 	border: none;
-	border-bottom: solid 1px #000;
-	font-family: 'Pathway Gothic One', sans-serif;
-	font-size: 1.1em;
-	height: 2em;
+	border-bottom: solid 2px #000;
+	font-size: 1em;
+	height: 30px;
 	outline: none;
 	padding: 2px;
-	width: 100%;
+	width: 346px;
 }
 
-#bt_identification{
+#bt_login{
 	background-color: #000;
 	border: none;
 	color: #ffb000;
 	cursor: pointer;
-	font-weight: bolder;
-	height: 2em;
-	margin-left: 75%;
+	float: right;
+	font-size: 1em;
+	padding: 11px;
 	width: 100px;
 }
