--- a/PRIN1/identification.css
+++ b/PRIN1/identification.css
@@ -69,3 +69,11 @@
 	padding: 5px;
 	width: 100px;
 }
+
+input[type=number]::-webkit-inner-spin-button { 
+	-webkit-appearance: none;
+}
+
+input[type=date]::-webkit-inner-spin-button { 
+	-webkit-appearance: none;
+}
