--- a/PRIN1/menu.css
+++ b/PRIN1/menu.css
@@ -47,7 +47,7 @@
 	height: 70px;
 	line-height: 70px;
 	margin: auto;
-	width: 160px;
+	width: auto;
 }
 
 #bt_identification{
@@ -56,7 +56,7 @@
 	color: #fff;
 	cursor: pointer;
 	font-size: 1em;
-	margin: 0px 30px;
+	margin: 0px 5px;
 	padding: 11px;
-	width: 100px;
+	width: auto;
 }
